<resources>
    <string name="appName">에니어그램</string>
    <string name="leftArrow">\u003c</string>
    <string name="rightArrow">\u003e</string>
    <string name="thankYou">이용해주셔서 감사합니다 : )</string>
    <string name="toSurveyButton">시작</string>
    <string name="toIntroductionButton">설명</string>
    <string name="toDictionaryButton">사전</string>
    <string name="page1">1 / 10</string>
    <string name="page2">2 / 10</string>
    <string name="page3">3 / 10</string>
    <string name="page4">4 / 10</string>
    <string name="page5">5 / 10</string>
    <string name="page6">6 / 10</string>
    <string name="page7">7 / 10</string>
    <string name="page8">8 / 10</string>
    <string name="page9">9 / 10</string>
    <string name="page10">10 / 10</string>
    <string name="radioButton1">1점</string>
    <string name="radioButton2">2점</string>
    <string name="radioButton3">3점</string>
    <string name="radioButton4">4점</string>
    <string name="radioButton5">5점</string>
    <string name="survey1">1. 특별한 이유 없이 짜증날 때가 있다.</string>
    <string name="survey2">2. 남을 돕는 것은 좋아하지만 내가 도움을 청하기는 싫다.</string>
    <string name="survey3">3. 내 일에 친한 동료를 끌어들여 함께 일하기를 좋아한다. 그래서 우리 사이는 멀어질 수 없다.</string>
    <string name="survey4">4. 이유 없이 무언가를 갈망하는 느낌이 자주 든다.</string>
    <string name="survey5">5. 사적인 공간을 갖는 것이 내게는 사치가 아니라 필수요소다.</string>
    <string name="survey6">6. 공들여 해야 할 프로젝트가 있을 때는 오히려 불안감이 덜하다.</string>
    <string name="survey7">7. 긍정적으로 생각하려는 나의 욕구는 가끔 중독과도 같다.</string>
    <string name="survey8">8. 무시 못할 힘과 영향력을 가진 사람이다.</string>
    <string name="survey9">9. 사람들은 나를 실제보다 더 평화로운 사람으로 본다.</string>
    <string name="survey10">10. 일을 빨리 완수하는 것보다 올바르게 완수하는 것이 중요하다.</string>
    <string name="survey11">11. 누군가를 도와주고 조언해줄 일이 생기면 이를 억제하기 힘들다.</string>
    <string name="survey12">12. 기한을 지키는 일이 세부사항을 일일이 바로잡는 일보다 중요하다.</string>
    <string name="survey13">13. 슬픔이 가진 달콤한 면을 받아들일 수 있다.</string>
    <string name="survey14">14. 행동하기에 앞서 그 문제에 대해 깊이 생각한다.</string>
    <string name="survey15">15. 사람들을 웃게 만들면서 더 편안해지고 걱정도 덜해진다.</string>
    <string name="survey16">16. 진부하고 똑같은 일을 반복하기보다 뭔가 새로운 시도를 좋아한다.</string>
    <string name="survey17">17. 무뚝뚝한 태도 때문에 때로는 사람들이 나를 멀리한다.</string>
    <string name="survey18">18. 자연 속에 있으면 큰 위안을 느낀다.</string>
    <string name="summary">\u25b2 개요</string>
    <string name="summaryGood">\u25b2 장점</string>
    <string name="summaryBad">\u25b2 단점</string>
    <string name="summaryWing">\u25b2 날개</string>
    <string name="result1">1 유형, 정의로운 개혁가(The Reformer)</string>
    <string name="result1w9">1 유형 9번 날개, 이상주의자(The Idealist) </string>
    <string name="result1w2">1 유형 2번 날개, 사회변혁가(The Servant-leader)</string>
    <string name="result2w1">2 유형 1번 날개, 봉사자(The Servant)</string>
    <string name="result2w3">2 유형 3번 날개, 주인(The Host/Hostess)</string>
    <string name="result2">2 유형, 남을 돕는 조력자(The helper)</string>
    <string name="result3">3 유형, 야심찬 성취가(The Achiever)</string>
    <string name="result3w2">3 유형 2번 날개, 매력적인 사람(The Charmer)</string>
    <string name="result3w4">3 유형 4번 날개, 전문가(The Professional)</string>
    <string name="result4">4 유형, 감성적인 예술가(The Individualist)</string>
    <string name="result4w3">4 유형 3번 날개, 귀족(The Aristocrat)</string>
    <string name="result4w5">4 유형 5번 날개, 보헤미안(The Bohemian)</string>
    <string name="result5">5 유형, 초연한 관찰자(The Investigator)</string>
    <string name="result5w4">5 유형 4번 날개, 인습타파주의자(The Iconoclast)</string>
    <string name="result5w6">5 유형 6번 날개, 해결사(The Problem-solver)</string>
    <string name="result6">6 유형, 의심많은 충성가(The Loyalist)</string>
    <string name="result6w5">6 유형 5번 날개, 방어하는 사람(The Defender)</string>
    <string name="result6w7">6 유형 7번 날개, 친구(The Buddy)</string>
    <string name="result7">7 유형, 행복한 열정가(The Enthusiast)</string>
    <string name="result7w6">7 유형 6번 날개, 엔터테이너(The Entertainer)</string>
    <string name="result7w8">7 유형 8번 날개, 현실주의자(The Realist)</string>
    <string name="result8">8 유형, 도전적인 지도가(The Challenger)</string>
    <string name="result8w7">8 유형 7번 날개, 독립적인 사람(The Maverick)</string>
    <string name="result8w9">8 유형 9번 날개, 곰같은 사람(The Bear)</string>
    <string name="result9">9 유형, 온순한 조정자(The Peacemaker)</string>
    <string name="result9w8">9 유형 8번 날개, 중재자(The Referee)</string>
    <string name="result9w1">9 유형 1번 날개, 몽상가(The Dreamer)</string>
    <string name="type11">이들은 올곧고 지조가 있지만, 이상주의와 완벽주의는 곧 잔소리로 이어진다. 주변에서 쉽게 볼 수 있는 깐깐하고 잔소리가 많은 사람들이다. MBTI의 관점에서 ISTJ, ESTJ, ISFJ의 성격을 가질 확률이 매우 높고, INTJ, INFJ, ENTJ, ESFJ, ENFJ의 성격을 가질 확률도 높다.</string>
    <string name="type12">이들은 원칙과 윤리를 중시하는 완벽주의자들이다. 스스로에게 매우 엄격하고 얼굴은 항상 긴장되어있다. 이들은 정직하고 일관적이며, 말과 행동과 생각이 일치한다. 또한, 공정함을 추구하고 성실하기 때문에 많은 사람들의 신뢰를 받는다. 이들은 윤리적이고 정의감이 강하며 원칙에 철저할 뿐이지만, 이 세상이 이들의 눈에는 그리 정의롭게 보이지 않기 때문에 어느 순간 개혁가가 되어 있다.</string>
    <string name="type13">이들은 부지런하고 올바른 만큼, 완벽함, 정의로움, 성실함에 집착한다. 모든 것에 의무감을 갖고 개선시키려고 한다. 사소한 일이나 최소한의 본능에도 자기 변호와 자기 비판을 한다. 항상 긴장하는 만큼 편하게 있지 못 한다. 가끔 과도할 정도로 자신과 남을 비판하고, 남이 하는 비판에 매우 민감하다. 이들은 사소한 잘못에 급급하다 큰 것을 놓치게 된다. 자신의 감정을 옳지 못한 것으로 여기고 억압하지만, 이런 감정이 폭발하면 주체하지 못해 폭력을 휘두를 수도 있다.</string>
    <string name="type1w2">이들은 1유형답게 이성적이고 현실적이지만, 2유형의 영향을 받아 어느 정도 부드럽고 이타적인 부분이 있다. 1유형의 스스로를 억압하는 기질은 2유형의 배려하는 마음과 균형을 이룬다. 이들은 9번 날개 유형보다 비판에 민감하지만, 사실 둘 다 1유형답게 스스로에게 엄격한 편이다. 이들은 단정하고 깔끔하다. 머리와 수염을 손질하며, 옷 매무새를 자주 정돈한다. 예외도 있지만 대체로 마른 편이며, 고개를 들어 세상을 내려다보는 인상을 주고, 미소는 약간 거만해 보일 수 있다. 또한, 어쩌면 눈매가 날카롭고 깐깐한 인상을 가졌을 수도 있다.</string>
    <string name="type1w9">이들은 1유형답게 완벽을 추구하면서도, 9유형의 영향을 받아 스트레스를 받지 않으려 한다. 이들은 모든 유형 중에서도 가장 감정을 드러내지 않는 사람들이다. 엄격하고, 합리적이고, 조용하고 현실적이며, 9유형의 영향으로 인해 직설적인 2번 날개와 달리 비판적인 발언을 자제하는 편이다. 이들은 9유형처럼 무신경하고 내성적이며 부드러우면서도 1유형처럼 원칙적인 판단을 내린다. 이들은 내면이 메마른 만큼 대체로 마른 편이며, 가끔 극단적으로 마른 사람도 있다. 남자들은 수염을 기르지 않고 자세가 올곧으며 몸짓을 잘 쓰지 않는다. 엄격한 인상을 주며 미소는 절제되어 있지만 그것은 진심이다.</string>
    <string name="type21">이들은 사교적이고 남을 배려할 줄 알지만 그런 이타심에 의해 스스로를 잃기도 한다. 사랑을 받기 위해 뭐든지 하는 만큼, 거부당하게 되면 너무나 커다란 분노에 범죄를 저지를 수도 있는 사람들이다. MBTI의 관점에서 ENFJ, ESFJ, ISFJ, ESFP의 성격을 가질 확률이 매우 높고 ISFP의 성격을 가질 확률도 높다.</string>
    <string name="type22">이들은 다정하고 관대하며 남을 잘 돌보고 사교적인 사람들이다. 낙천적으로 보이지만 생각보다 진지하고 감정을 곧잘 드러내며 사람들의 기분을 잘 이해한다. 덕분에 많은 사람들이 2유형을 좋아하고 이상적인 부모의 유형으로 평가하기도 한다. 사랑이나 우정과 같은 개념에 관심이 많다. 이들은 사람들에게 관심과 애정, 격려를 아끼지 않는 활력소가 된다.</string>
    <string name="type23">이들은 언제나 남을 도와야 한다는 의무감에 사로잡혀 있으며, 남들이 필요한 것이 무엇인지 신경 쓰고 돌보고 있어야 마음이 편하다. 이들은 상대방의 호감을 얻기 위해 곧잘 아첨을 하기도 한다. 모든 사람들과 친구가 되고 중요한 사람이 되기를 원한다. 이들은 소유욕이 강하고 아첨하려 들며 돕는 만큼 보답 받길  원한다. 보답을 받지 못 하면 분노를 느끼고, 타인을 조종하려 들기도 한다. 이들의 남을 돕는 행동의 배경에는 자만심이 깔려 있으며, 이 때문에 쉽게 도움을 요청하지 못한다. 하지만 사랑을 받기 위해서라면 뭐든지 할 수 있는 유형이다.</string>
    <string name="type2w1">이들은 2유형답게 사랑을 받길 갈구하면서도, 1유형처럼 이성적인 판단력을 가지고 있다. 이들은 3번 날개보다는 단호하고 완고하지만, 1유형보다 까다롭지는 않다. 이들은 행동 하나하나가 신중한 착하고 매너있는 사람들이다. 그러한 모습 안에는 억압된 분노와 사랑을 받고 싶은 욕구가 내재되어 있다. 이들은 3번 날개처럼 매력적이기 보다, 필요한 사람이 되고자 한다. 이들은 옷을 고를 때 대체로 유행을 따른다. 실용적인 것보다 격식을 갖춰 입는 것을 선호한다. 단정하고 깔끔한 것을 좋아하고 화려하거나 튀는 것을 꺼린다. 우아하고 침착하며, 빛나는 보석이나 화려한 넥타이로 얌전하면서도 돋보이게 치장한다. 이들은 곧게 선 자세에 간혹 세상을 내려다보는 눈빛을 하고 있을 수 있다.</string>
    <string name="type2w3">이들은 1번 날개에 비해 외향적인 사람들이다. 2번의 사랑을 받고자 하는 욕구에 3유형의 야심이 섞여서 주목 받는 것을 두려워하지 않는 성격을 형성한다. 이들은 진지한 1번 날개와 달리 매혹적이고 장난스럽다. 화려하고 유행에 민감하며 외모를 가꾸는데 많은 신경을 쓴다. 여성들은 화장에, 남성은 옷차림에 매우 신경을 쓴다. 이들은 매력적인 옷차림을 하고 있지만, 특이하게 입는다는 의미는 아니다. 이들은 10대, 20대에 가장 매력적이고 30대로 접어들면서 살이 붙는 양상을 보인다. 가끔 그 이전에도 살이 찔 수 있다.</string>
    <string name="type31">이들은 활동적이고 업무 처리이 뛰어나지만, 이 유능함에 도취되어 쉽게 잘난 척을 한다. 성공에 집착하는 일벌레나 다른 사람을 깔보는 속물들이 많다. MBTI의 관점에서 ENTJ, ESTJ, ESTP의 성격을 가질 확률이 매우 높고 ENFJ, ENTP, ESFJ, INTJ의 성격을 가질 확률도 높다.</string>
    <string name="type32">이들은 융통성이 있고 적응력이 강하며 사람들에게 비쳐지는 자신의 이미지에 관심이 많은 사람들이다. 이들은 사회적으로 통용되는 성공한 사람들의 이미지를 자신의 것으로 만든다. 이들이 팀원으로 있으면 같은 팀원들을 격려 하고 팀의 사기를 잘 북돋울 것이다. 유능하고 효율적으로 일을 처리할 것이다. 인상이 좋고 자신감이 있으며 활동적이고 현실적이면서도 창의력이 있다.</string>
    <string name="type33">이들은 성공에 얽매이기 때문에 목표에만 집착하고 일에 매진하느라 항상 바쁘다. 사람들 사이에서 최고가 되려고 하기 때문에 지나치게 경쟁심을 갖고, 잘난 척을 많이 한다. 말을 잘 하고 상황에 따라 스스로를 연출하며 상대방을 이용할 줄 안다. 실리를 추구하고 계산에 밝기 때문에 효율성과 성공에 매진하고 사람들도 성공의 도구로 이용한다. 성과가 나타나지 않는 활동을 싫어하고 내면의 감정에 관심이 없다. 성공을 위해서라면 거짓말도 서슴지 않고 거짓된 선으로 스스로를 포장한다.</string>
    <string name="type3w2">이들은 전형적인 상인들이다. 2유형의 영향으로 남들이 보기 좋은 모습과 기분을 좋게 만드는 것에 대한 욕구가 있지만, 3유형의 칭찬받고 싶은 욕구가 우선시된다. 그러나 할 수 있다면 두 욕구를 모두 충족시키려 한다. 내향적인 4번 날개와 다르게, 이들은 가능한 많은 청중들과 닿고자 한다. 이들은 꾸미는 것을 좋아하고 실제로도 옷을 잘 입는다. 유행에 뒤쳐진 옷은 절대 입지 않는다. 몸 관리에도 철저해서 살이 붙는 것을 두고 보지 않는다. 액세서리는 대체 무난한 것을 선택하는 편이지만, 조금 과할 수 있는 스타일도 충분히 소화해낸다. 이들은 차분하면서도 쾌활하고 사회적이며, 사람들에게 항상 좋은 모습을 보여주려 노력한다.</string>
    <string name="type3w4">이들은 2유형처럼 모든 사람들에게 사랑을 받는 대신 그들이 선택한 몇몇 사람들의 관심을 원한다. 4유형의 내향적인 성향은 3유형의 사회적인 성격에 상쇄되고, 4유형의 감정의 기복을 3유형 특유의 이미지 관리에 가려져 감정이 변덕스럽지 않고 스트레스를 받는 상황에서도 침착함을 유지할 수 있다. 이들은 3유형이기 때문에 사회적으로 좋은 이미지를 추구하지만, 동시에 4번 날개의 영향으로 특별한 사람으로 보이길 원하게 된다. 이들은 대중들과는 다른 요소들로 스스로를 치장한다. 유행을 따르기 보다는 창조하기를 원한다. 4유형의 미학적인 재능이 이것을 가능하게 만든다.</string>
    <string name="type41">이들은 생각이 깊고 개성이 있지만, 세상에 오직 자신만 불행하고 착각할 수도 있다. 예측할 수 없는 감정과 자신만이 불행하다는 생각은 정말 스스로를 불행하게 만든다. MBTI의 관점에서 INFP, INFJ, ISFP의 성격을 가질 확률이 매우 높고 ENFP의 성격을 가질 확률도 높다.</string>
    <string name="type42">이들은 고상하고 우아하며, 세련되고 신비로운 사람들이다. 이들은 미적 감각과 연출력이 뛰어나다. 창조성이 높고, 개성이 뚜렷하며, 특별한 이야기를 품고 있다. 섬세하고 예민한 감성을 가지고 있기 때문에 이상적인 상담자가 될 수 있다. 상징적이고 예술적인 표현에 능숙하며 가끔 작위적인 행동을 하는 경우도 있다.</string>
    <string name="type43">이들은 독특함을 추구하기 때문에 아무도 자신을 이해하고 사랑하지 않는다고 느낀다. 지나치게 어두운 감정에 집착하고, 자존감이 낮아서 환상 속의 자신에 빠지기도 한다. 비관적이고 예민해서 사소한 역경에도 쉽게 무너지고 우울해진다. 특별한 존재가 되기 위해 어두운 과거와 우울한 감정에 빠진다. 행복하기 위해서 불행해져야 하고, 아무도 자신을 이해하지 못한다 생각하며 비사교적이다. 이런 낮은 자존감은 질투로 이어지거나 끝없는 선망으로 이어지기도 한다. </string>
    <string name="type4w3">이들은 극적인 감정을 가진 사람들이다. 3유형의 나섬으로써 주목을 받으려는 특징과 4유형의 숨음으로써 주목을 받으려는 특징이 갈등을 일으키기 때문에 이들은 외향성과 내향성이 번갈아 나타난다. 이 유형은 감정이 복받치면 진정하기가 어렵다. 이성적이고 분석적인 5번 날개와 달리, 이들은 자신의 강렬한 감정을 표현하고 싶어 한다. 이들은 예술적이고 고상한 표현에 관심이 많다. 체격은 대체로 보통이거나 그보다 조금 마른 편이다. 여자들은 길고 웨이브진 머리를 선호한다. 이들은 옷을 잘 입으며 밝은 색과 검정색을 자주 매치한다. 평범한 공공장소에서도 독특하고 튀는 옷을 입는 사람들은 대부분 이 유형이다. 아니면 7유형이거나.</string>
    <string name="type4w5">이들은 매우 진중한 사람들이다. 강력하고 열정적인 감정으로 가득 차있지만 가라앉아앉다. 이들은 자신의 감정을 표현하길 꺼리는데 아무도 자신을 이해하지 못 하게 하기 위함이다. 3번 날개처럼 이들도 자신을 특별하고 다르다고 느끼지만 대중에게 자신의 감정을 표현하지는 않는다. 한편, 3번 날개에는 없는 연약함과 섬세함을 가진 사람들이다 어떤 이들은 외모에 전혀 관심을 갖지 않고 캐주얼보다도 못한 옷을 입는다. 몸에 맞는 옷은 입지 않으며 주로 검고 헐렁한 옷을 입는다. 반면에, 어떤 이들은 옷을 굉장히 잘 입어서 언제든지 우아하고 절제된 스타일을 보여준다.</string>
    <string name="type51">이들은 지적이고 신중하지만 집에 자주 박혀있거나 아예 고립되어 있을 가능성이 높다. 어쩌면 몸을 움직이거나 사람을 사귈 필요가 없이 뇌만 남아있는 상태를 반길 지도 모르겠다. MBTI의 관점에서 INTP, INTJ, ISTP, ISTJ의 성격을 가질 확률이 매우 높고 INFP, INFJ의 성격을 가질 확률도 높다.</string>
    <string name="type52">이들은 지적이고 냉정하며 뛰어난 이해력과 통찰력을 가진 사람들이다. 호기심이 많고 혁신적이며 발명에 소질이 있다. 이들은 산만하고 주제가 없는 이야기를 싫어하고 요약과 정리, 도표화와 암호화에 매우 능숙하다. 말수가 적지만 신중하며 사려깊고, 냉정하지만 부드러운 성격이며, 의외로 유머감각도 있다. 어떤 문제든지 한 문제를 매우 깊이 파고들어서 핵심을 파악할 줄 안다.</string>
    <string name="type53">이들은 모든 것을 알고 이해해서 미래를 대비하고자 한다. 이런 정보들을 정리하기 위해 혼자만의 시간과 공간이 필요하며 사람들 앞에 나서는 것을 싫어한다. 사생활이 공개되는 것을 두려워하고 현실에 개입하지 않으면서 모든 것을 알고 싶어 한다. 이들의 지식을 향한 집착은 탐욕과도 같아서 끊임없이 정보를 끌어모으고 수집하며 쌓아둔다. 그에 반해 이들은 욕구에 대해서는 인색하다. 자원을 남에게 주는 것 뿐만 아니라 자신의 욕구를 채우는 것에도 인색하다.</string>
    <string name="DictionaryBasic">\u25bc 기본 유형</string>
    <string name="DictionaryWing">\u25bc 날개 유형</string>
    <string name="whatBox1">\u25b2 애니어그램이란?</string>
    <string name="whatBox2">\u25b2 도움을 주신 분들...</string>
    <string name="what1">에니어그램(Enneagram)은 사람을 9가지 성격으로 분류하는 성격 유형 지표이며 인간에 대해 이해할 수 있는 방법들 중에 하나입니다. 희랍어에서 9를 뜻하는 ennear와 점, 선, 도형을 뜻하는 grammos의 합성어로, 본래 에니어그램은 \'9개의 점이 있는 도형\'이라는 의미입니다.</string>
    <string name="what2">에니어그램의 각 유형에 대한 원문과 번역글은 다음의 사이트에서 발췌했습니다. 도움에 진심으로 감사드립니다 :-)</string>
    <string name="link1">http://maindheart.org</string>
    <string name="link2">http://hurr.tistory.com</string>
    <string name="link3">http://blog.naver.com/dryks</string>
</resources>