<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".What">
    <LinearLayout
        style="@style/topbarLayout">
        <Button
            android:id="@+id/leftArrow"
            style="@style/arrow"
            android:text="@string/leftArrow"/>
        <TextView
            android:id="@+id/topbar"
            style="@style/topbar"
            android:text="@string/appName"/>
        <Button
            android:id="@+id/rightArrow"
            style="@style/arrow"/>
    </LinearLayout>
    <TextView
        android:id="@+id/whatBox1"
        style="@style/box"
        android:text="@string/whatBox1"/>
    <TextView
        android:id="@+id/what1"
        style="@style/type"
        android:text="@string/what1"/>
    <TextView
        android:id="@+id/whatBox2"
        style="@style/box"
        android:text="@string/whatBox2"/>
    <TextView
        android:id="@+id/what2"
        style="@style/type"
        android:text="@string/what2"/>
    <TextView
        android:id="@+id/link1"
        style="@style/link"
        android:text="@string/link1"/>
    <TextView
        android:id="@+id/link2"
        style="@style/link"
        android:text="@string/link2"/>
    <TextView
        android:id="@+id/link3"
        style="@style/link"
        android:text="@string/link3"/>
</LinearLayout>