<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">
    <LinearLayout
        android:id="@+id/topbarLayout"
        style="@style/topbarLayout"
        android:layout_alignParentTop="true">
        <Button
            android:id="@+id/leftArrow"
            style="@style/arrow"
            android:text="@string/leftArrow"/>
        <TextView
            android:id="@+id/topbar"
            style="@style/topbar"
            android:text="@string/appName"/>
        <Button
            android:id="@+id/rightArrow"
            style="@style/arrow"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbarLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp">
            <TextView
                android:id="@+id/resultBar"
                style="@style/resultBar"
                android:text="@string/result1"/>
            <TextView
                android:id="@+id/resultSummary"
                style="@style/box"
                android:text="@string/summary"/>
            <TextView
                android:id="@+id/type1"
                style="@style/type"
                android:text="@string/type11"/>
            <TextView
                android:id="@+id/resultGood"
                style="@style/box"
                android:text="@string/summaryGood"/>
            <TextView
                android:id="@+id/type2"
                style="@style/type"
                android:text="@string/type12"/>
            <TextView
                android:id="@+id/resultWing"
                style="@style/box"
                android:text="@string/summaryWing"/>
            <TextView
                android:id="@+id/typew"
                style="@style/type"
                android:text="@string/type1w2"/>
            <Button
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:layout_margin="12dp"
                android:paddingLeft="12dp"
                android:background="@drawable/rectangle"
                android:textColor="#301551"
                android:textSize="12dp"
                android:text="친구에게 공유하기"/>
            <TextView
                android:id="@+id/blank"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="#FFFFFF"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>